--- a/Proyecto-Web-Front/src/main/resources/META-INF/resources/login.xhtml
+++ b/Proyecto-Web-Front/src/main/resources/META-INF/resources/login.xhtml
@@ -10,13 +10,13 @@
     <title>Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <h:outputStylesheet name="css/stylesLogin.css" />
+    <h:outputStylesheet name="css/stylesLogin.css" library="assets" />
 </h:head>
 
 <h:body>
     <section class="Container-principal">
         <div class="izquierda">
-            <h:graphicImage name="Assets/loginImage.png" alt="Logo UDES" styleClass="logo" />
+            <h:graphicImage name="images/loginImage.png" alt="Logo UDES" styleClass="logo" library="assets"/>
         </div>
         <div class="login-container">
             <div class="ContainerSecundarioForm">
