"Feat_ Funcionalidades de notas y estudiante"

--- a/Proyecto-Web-Front/src/main/resources/META-INF/resources/login.xhtml
+++ b/Proyecto-Web-Front/src/main/resources/META-INF/resources/login.xhtml
@@ -14,6 +14,8 @@
 </h:head>
 
 <h:body>
+
+    <ui:include src="/assets/components/header/header.xhtml" />
     <section class="Container-principal">
         <div class="izquierda">
             <h:graphicImage name="images/loginImage.png" alt="Logo UDES" styleClass="logo" library="assets"/>
